crates/functions/src/tests/string_binary/snapshots/sha2/query_sha2_case_sensitivity.snap
---
source: crates/functions/src/tests/string_binary/sha2.rs
description: "\"SELECT \n        sha2('hello') as lowercase,\n        sha2('HELLO') as uppercase,\n        sha2('Hello') as mixed_case\""
---
Ok(
    [
        "+------------------------------------------------------------------+------------------------------------------------------------------+------------------------------------------------------------------+",
        "| lowercase                                                        | uppercase                                                        | mixed_case                                                       |",
        "+------------------------------------------------------------------+------------------------------------------------------------------+------------------------------------------------------------------+",
        "| 2cf24dba5fb0a30e26e83b2ac5b9e29e1b161e5c1fa7425e73043362938b9824 | 3733cd977ff8eb18b987357e22ced99f46097f31ecb239e878ae63760e83e4d5 | 185f8db32271fe25f561a6fc938b2e264306ec304eda518007d1764826381969 |",
        "+------------------------------------------------------------------+------------------------------------------------------------------+------------------------------------------------------------------+",
    ],
)
