crates/functions/src/tests/string_binary/snapshots/sha2/query_sha2_empty_string.snap
---
source: crates/functions/src/tests/string_binary/sha2.rs
description: "\"SELECT \n        sha2('') as sha2_empty,\n        sha2('', 224) as sha2_224_empty,\n        sha2('', 384) as sha2_384_empty,\n        sha2('', 512) as sha2_512_empty\""
---
Ok(
    [
        "+------------------------------------------------------------------+----------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------+",
        "| sha2_empty                                                       | sha2_224_empty                                           | sha2_384_empty                                                                                   | sha2_512_empty                                                                                                                   |",
        "+------------------------------------------------------------------+----------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------+",
        "| e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 | d14a028c2a3a2bc9476102bb288234c415a2b01f828ea62ac5b3e42f | 38b060a751ac96384cd9327eb1b1e36a21fdb71114be07434c0cc7bf63f6e1da274edebfe76f65fbd51ad2f14898b95b | cf83e1357eefb8bdf1542850d66d8007d620e4050b5715dc83f4a921d36ce9ce47d0d13c5d85f2b0ff8318d2877eec2f63b931bd47417a81a538327af927da3e |",
        "+------------------------------------------------------------------+----------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------+",
    ],
)
